--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Acknowledgements</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="shortcut icon" href="Images/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,600;0,700;0,800;1,400;1,700&family=Titillium+Web:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
