--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <p>MyzusBase is your first port of call for all things <em>Myzus persicae</em>. This reference site for the peach potato aphid (<em>M. persicae</em>) contains genomic resources for over one hundred globally sourced variants of the
           species -
           providing downloadable links to their accessions.</p>
-          <p>It provides information on the latest research on the species, its role as an agricultural crop pest and its development of unprecedented inseciticde resistance which makes it a worldwide food security challenge. </p>
+          <p>It provides information on the latest research regarding this aphid, its role as an agricultural crop pest, and its development of unprecedented inseciticde resistance which makes it a worldwide food security challenge. </p>
           <p>To navigate this site, make use of the navbar at the top of the page. Or, should you wish to visit other online resources containing further information on
           this species and insecticide resistance, please see the links at the bottom of the page.</p>
         </div>
@@ -125,27 +125,25 @@
 
         <h2>Site Map:</h2>
         <p>
-          • General information on the peach potato aphid and this website can be found via the “Background” navbar tab. <br><br>
-          • The “Genomic Resources” tab provides access to the two M. persicae reference sequence assemblies, via downloadable
+          • 1. The "Background" navbar tab links to general information on the peach potato aphid. <br><br>
+          • 2. The “Genomic Resources” tab provides access to the two <em>M. persicae</em> reference sequence assemblies, via downloadable
           links. Beneath this, purely genomic studies are surmised, with BioProject accessions included for ease of data
           access.<br><br>
-          • “Transcriptomic data” contains general <em>M. persicae</em> RNAseq studies as categorised by tissue type, with brief summaries of
-          the
-          investigation purpose/outcome. BioProject accessions are also provided. <br><br>
-          • “Insecticide Resistance” demonstrates to which insecticides <em>M. persicae</em> has been shown to exhibit a resistant
-          phenotype. Omitted from other sections, studies involving particular insecticides and concomitant resistance in M.
-          persicae are listed. Both genomic and transcriptomic studies are cited and summarised herein. Where possible
-          mechanisms
-          for resistance are provided. <br><br>
-          • "Population sequencing data" contains information on the 100+ living clone library of globally sources M. persiace
-          variants, including for which genomic/transcriptomic data is currently available (including downloadable links).
+          • 3. “Population sequencing data" contains information on the 100+ living clone library of globally sources M. persiace
+          variants, including for which genomic/transcriptomic data is currently available (including downloadable links).  <br><br>
+          • 4. "Transcriptomic data” contains general <em>M. persicae</em> RNAseq studies as categorised by tissue type, with brief summaries of
+          the investigation purpose/outcome. BioProject accessions are also provided. <br><br>
+          • 5. “Insecticide Resistance” demonstrates to which insecticides <em>M. persicae</em> has been shown to exhibit a resistant
+          phenotype. Omitted from other sections, studies involving particular insecticides and concomitant resistance in <em>M.
+          persicae</em> are listed. Both genomic and transcriptomic studies are cited and summarised. Where possible
+          mechanisms for resistance are provided.
           <br><br>
-          • Post Genomic approaches gives a brief account of studies/techniques made feasible because of the
+          • 6. "Recent literature" provides a reference list of any papers published on the peach potato aphid since 2020.
+          <br><br>
+          • 7. Post Genomic approaches gives a brief account of studies/techniques made feasible because of the
           genomic/transcriptomic data now available for <em>M. persicae</em>.
           <br><br>
-          • "Recent literature" provides a source linking any papers published on the peach potato aphid since 2020. </p>
-          <br>
-          • "Control methods" details some of the means by which populations of <em>M. persicae</em> are kept under control. </p>
+          • 8. "Control methods" details some of the means by which populations of <em>M. persicae</em> are kept under control. </p>
       </div>
     </div>
   </div>
