--- a/insecticide_resistance.html
+++ b/insecticide_resistance.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="CSS/styles_sheet.css">
 </head>
+
 <body>
   <div class="fixed_navbar">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #272343;">
@@ -69,64 +70,75 @@
   <div class="sub_heading">
     <h2>Insecticide Resistance</h2>
   </div>
-  <div class="container-fluid structure">
+  <div class=" col-lg-12 col-md-12 col-sm-12 info_window_green">
+    <p> This section is a resource covering previous work in which specified insecticides have been tested for resistance in M. persicae.
+      Most of these investigations entail insecticide bioassays, whereupon exposure to certain insecticides results in the ability to screen insecticide resistant or susceptible phenotypes. Mechanisms behind this phenotypic differecne are often
+      posited, and a condensed version of this is given for relevant studies.
+      Indiscriminate use of insecticides such as imidacloprid have driven the widespread emergence of resistance in this aphid species. Below are some of the insecticides to which populations now exhibit tolerance, and brief details of the studies
+      elucidating this. Mechanisms are also given as well as any accession number to access available data, where possible.
+    </p>
+
+
+
+
+  </div>
+  </div>
+
+
+
+  <div class="fluid-container">
+
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12">
-        <div class="remit">
-          <p>
-          <h2>Scope:</h2>MyzusBase is your first port of call for all things <em>Myzus persicae</em>. This reference site for the peach potato aphid (<em>M. persicae</em>) contains genomic resources from all available globally sourced variants of the
-          species -
-          providing downloadable links to their accessions.</p>
-          <p>It provides information on the latest research on the species, its role as an agricultural crop pest and its development of unprecedented inseciticde resistance which makes it a worldwide food security challenge. </p>
-        </div>
-        <div class="information">
-          <p>
-          <h2>Introduction:</h2>MyzusBase is your first port of call for all things <em>Myzus persicae</em>. This reference site for the peach potato aphid (<em>M. persicae</em>) contains genomic resources from all available globally sourced variants
-          of the species -
-          providing downloadable links to their accessions.</p>
-          <p>It provides information on the latest research on the species, its role as an agricultural crop pest and its development of unprecedented inseciticde resistance which makes it a worldwide food security challenge. </p>
-        </div>
+
+
+      <div class=" col-lg-6 col-md-12 col-sm-12 info_window_green clone_data central">
+        <h2>Insecticide Class:</h2>
+        <h2>Carbamates</h2>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12">
+      <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data central">
 
-
-        <div id="Myzus_carousel" class="carousel slide" data-ride="carousel" data-interval="false">
-          <div class="carousel-inner carousel_dimensions">
-            <div class="carousel-item active">
-
-              <img class="myzus_image" src="Images/Mpersicae(DavidCappaert_bugwood.org_invasive.org).jpg" alt="Image M. persicae and progeny.">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 1/3</span>
-                <span>Mature <em>M. persicae</em> and juveniles (nymphs).</span>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="myzus_image" src="Images/Winged_Myzus_persicae_crop.png" alt="Winged (alate) <em>M.persicae</em>">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 2/3</span>
-                <span>Winged phase (alate) <em>M. persicae.</em></span>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img class="myzus_image" src="Images/Viviparous_aphids.png" alt="Viviparous repoduction in <em>M. persicae.</em>">
-              <div class="carousel-caption d-md-block caption_class">
-                <span>&nbsp &nbsp 3/3</span>
-                <span>Aphid producing clone offspring.</em></span>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev button_prev" href="#Myzus_carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next button_next" href="#Myzus_carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
+        <h2>Insecticide Class:</h2>
+        <h2>Neonicitinoids</h2>
 
       </div>
+    </div>
+
+  </div>
+  <div class="row">
+    <div class=" col-lg-6 col-md-12 col-sm-12 info_window clone_data">
+      <h2></h2>
+      <h3></h3>
+      <p>Insecticide/Test: Exposure of pirimicarb (a carbamate anti-cholinesterase insecticide) to M. persicae. Study: “Insecticide resistance mechanisms in the green peach aphid Myzus persicae (Hemiptera: Aphididae) I: A transcriptomic survey”
+        (2012) (Silva et al), Bioassays: i) Toleranace bioassay: The initial bioassay established tolerance by spraying aphids topically with pirimicarb. ii) Toxicity bioassay: The second bioassay entailed the use of the leaf dip technique, where
+        aphids were placed on pepper leaf discs (for 48hrs) dipped in of various concentrations of pirimicarb. Resistance mechanism: Three phenotypes emerged on exposure; susceptible, resistant and multiply resistant. In susceptible individuals,
+        hundreds of genes (including detox genes) were up-regulated upon pirimicarb challenge. However, resistant aphids were found to have kdr sodium channel mutations. Multiply resistant aphids had this mutation too, but also possessed a modified
+        acetylcholinesterase. These latter two resistant genotypes also had considerably upon pirimicarb exposure, including those involved in detoxification. Cuticular proteins were also found to be upregulated, which was theorised to be suggestive
+        of thickening or increased capacity for sequestration of insecticides prior to entering the haemolymph. BioProject accession: PRJNA159425, Tissue: Whole body, Data: Transcriptomic (RNAseq)</p>
+    </div>
+    <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+      <p>Insecticides/Test: Neonicitinoids (imidacloprid and thiomethoxam)
+        Study: “Mutation of a nicotinic acetylcholine receptor Beta subunit is associated with resistance to neonicotinoid insecticides in the aphid Myzus persicae.” (Bass et al) (2011) Bioassays: A topical ‘micro-application’ bioassay was performed
+        and mortality measured after 72hrs, followed by a spray bioassay (using a Potter’s spray tower). Exposures were administered both in the presence (synergism bioassay) and absence of PBO, to inhibit any contribution of detoxification p450
+        enzymes to resistant phenotypes. Resistance Mechanisms: An arginine to threonine substitution in the D-loop of the nicotinic acetylcholine receptor (nAChR) provokes reduced susceptibility to neonicitinoids, preventing nervous system
+        hyper-excitation. Associated BioProject accession: PRJNA132457. Tissue: Whole Body Data: Transcriptomic (RNAseq).
+      </p>
+    </div>
+    <div class="row">
+
+    </div>
+    <div class="row">
+      <div class=" col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+        <p>Test/Insecticide: Methomyl, pirimicarb and thiodicarb (carbamate insecticides) exposure to tobacco adapted popuations (M. persicae nicotianae). Study: “Monitoring for MACE resistance in the tobacco-adapted form of the green peach aphid,
+          Myzus persicae (Sulzer) (Hemiptera: Aphididae) in the eastern United States” Bioassays: Leaf dip methodology was used whereby all insecticides separately soaked tobacco leaf discs for 5s prior to 24hr exposure for adult aphids. Resistance
+          mechanism: AChE (acetylcholinesterase) enzyme insensitivity increases the IC50 value required for pirimicarb, and to a lesser extent methomyl. AChE variatiants, with a modified target or higher activate site render them tolerant to
+          pirimicarb. Methomyl was not resisted to the same extent, despite some tolerance, suggestive of “negative target site cross-resistance in the carbamate group”. No aphids were resistant to thiodicarb despite its carbamate classification.</p>
+      </div>
+      <div class="col-lg-6 col-md-12 col-sm-12 info_window_blue clone_data">
+        <p>Insecticide/Test: Comparative transcriptomic study of neonicotinoid resistant and susceptible M. persicae variants. Study: “Transcriptome-based identification and characterization of genes responding to imidacloprid”(2019). Resistance mechanism: Down regulation of ABC transporter (ABCG23, 111040927) in resistant aphids, suggestive of role in insecticide metabolism/transport. Down-regulation of cuticle protein genes in the imidacloprid resistant aphid. (Also Glutathione S-transferase/trypsin downregulation.) Tissue: Whole body  Data: Transcriptomic (BioProject accession: PRJNA558181).</p>
+      </div>
+
+
+
     </div>
   </div>
   <div class="links">
